--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         </div>
          <p class="main-text">Discover the best experiences and services tailored just for you.</
-        <a class="main-button" href="#">Join Now</a>
+        <button class="main-button" >Join Now</button>
     </div>
 </body>
 </html>
